# BlizzardWarcraftAPI

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Assembly.ps1  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish-lib.yml
BlizzardWarcraftAPI/: BlizzardAuthToken.py  BlizzardWarcraftAPI.py  __init__.py  data.py  urls.py
BlizzardWarcraftAPI/modules/: AchievementAPI.py  AuctionHouseAPI.py  BlizzardWarcraftAPI_base.py  CharacterAchievementsAPI.py  CharacterAppearanceAPI.py  ConnectedRealmAPI.py  __init__.py
blizzardwarcraftapi/: BlizzardAuthToken.py  exceptions.py
blizzardwarcraftapi/modules/: BlizzardWarcraftAPI_base.py  __init__.py
docs/: completed.md
samples/: BlizzardAuthToken_example.py  BlizzardWarcraftAPI_example.py
tests/: .env.example  AchievementAPI_test.py  AuctionHouseAPI_test.py  BlizzardAuthToken_test.py  BlizzardWarcraftAPI_test.py  CharacterAchievementsAPI_test.py  CharacterAppearanceAPI_test.py  ConnectedRealmAPI_test.py  __init__.py  test_base.py
tests/gameData/: AchievementAPI_test.py  AuctionHouseAPI_test.py  BlizzardAuthToken_test.py  ConnectedRealmAPI_test.py  CreatureAPI_test.py  GuildCrestAPI_test.py  HeirloomAPI_test.py  ItemAPI_test.py  JournalAPI_test.py  PlayableClassAPI_test.py  PlayableRaceAPI _test.py  PvPSeasonAPI_test.py
tests/profile/: AccountProfileAPI_test.py  CharacterAchievementsAPI_test.py  CharacterAppearanceAPI_test.py  CharacterCollectionsAPI_test.py  CharacterEncountersAPI_test.py  CharacterEquipmentAPI_test.py  CharacterHunterPetsAPI_test.py  CharacterMediaAPI_test.py  CharacterMythicKeystoneProfile_test.py  CharacterProfessionsAPI_test.py  CharacterProfileAPI_test.py  (+1 more)
(+29 files in other folders)
