[tool.poetry]
name = "BlizzardWarcraftAPI"
version = "0.2.5"
authors = ["Angeloffy <angeloffy.work@gmail.com>"]
maintainers = [
    "Angeloffy <angeloffy.work@gmail.com>",
    "Kotorkovsciy <kotorkovsciy@gmail.com>"
]
description = "Warcraft API"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    {include = "BlizzardWarcraftAPI"}
]
license = "MIT"
homepage = "https://github.com/Angeloffy/BlizzardWarcraftAPI/tree/main"
repository = "https://github.com/Angeloffy/BlizzardWarcraftAPI/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Angeloffy/BlizzardWarcraftAPI/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
